# langchain-learn-travel-booking-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py
app/agent/: agent.py  context.py  memory.py  tools.py
app/db/: db.py
app/db/models/: bookings.py  chat.py  user_metadata.py
app/db/schemas/: chat.py  document.py
app/rag_helpers/: document_processor.py  vectorstore.py
app/routers/chat/: routes.py
app/routers/ingest/: ingest.py
